--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "posterllava"
-version = "1.1.3"
+name = "miridih-layoutGen"
+version = "1.0.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.8"
@@ -13,11 +13,11 @@ classifiers = [
     "License :: Apache-2.0 License",
 ]
 dependencies = [
-    "torch==2.0.1", "torchvision==0.15.2",
-    "transformers==4.31.0", "tokenizers>=0.12.1,<0.14", "sentencepiece==0.1.99", "shortuuid",
+    "torch==2.3.0", "torchvision==0.18.0", "deepspeed==0.14.4",
+    "transformers==4.31.0", "tokenizers==0.13.3", "sentencepiece==0.1.99", "shortuuid",
     "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0",
     "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
-    "gradio==3.35.2", "gradio_client==0.2.9",
+    "gradio==3.35.2", "gradio_client==0.2.9","seaborn==0.13.2", "torch_geometric==2.5.3",
     "requests", "httpx==0.24.0", "uvicorn", "fastapi",
     "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
 ]
